--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,25 @@ sonarRunner {
 	property "sonar.jdbc.password", sonarJdbcPassword
     }
 }
+
+buildscript {
+  repositories {
+    mavenCentral()
+    maven {
+      url 'http://maven.tmatesoft.com/content/repositories/releases/'
+    }
+  }
+
+  dependencies {
+    classpath 'au.com.ish.gradle:release:2.2.2'
+  }
+}
+apply plugin: 'release'
+
+release {
+  failOnSnapshotDependencies = true
+  allowLocalModifications = false
+  releaseDryRun = false
+  scm = 'git'
+}
+version = release.projectVersion
