--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "2.3.3"
     compile group: 'org.apache.commons', name: 'commons-lang3', version: "3.3.2"
     compile group: 'log4j', name: 'log4j', version: '1.2.15'
+    compile group: 'net.vidageek', name: 'mirror', version:'1.6.1'
 }
 
 
